# IQ_and_EQ

./: .dockerignore  README.md  db.json  requirements.txt
api/: serializers.py  urls.py  validators.py  views.py
config/: settings.py  urls.py
poetry-iq_and_eq/: pyproject.toml
testing/: admin.py  models.py
testing/migrations/: 0001_initial.py
