[tool.poetry]
name = "poetry-iq-and-eq"
version = "0.1.0"
description = ""
authors = ["Maystrenko Dmitriy <kultmet@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_iq_and_eq"}]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"
django = "^4.2.2"
djangorestframework = "^3.14.0"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
